fix: resolve backend bugs